--- a/app/src/main/res/layout/activity_data_usage.xml
+++ b/app/src/main/res/layout/activity_data_usage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,47 +7,43 @@
     android:background="@color/gray_200"
     tools:context=".activity.components.DataUsageActivity">
 
-    <FrameLayout
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="@drawable/top_background" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            android:background="@drawable/top_background" />
-
-        <com.example.myapplication.widget.CustomTitleBarViewGroup
-            android:id="@+id/tvTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:paddingStart="13dp"
-            android:paddingEnd="13dp"
-            android:textColor="#333333"
-            app:back_src="@drawable/arrow_white"
-            app:imageHeight3="16dp"
-            app:imageWidth3="8dp"
-            app:layout_collapseMode="pin"
-            app:right_imageHeight3="20dp"
-            app:right_imageWidth3="22dp"
-            app:right_src="@drawable/service"
-            app:title="流量查询" />
-
-
+    <com.example.myapplication.widget.CustomTitleBarViewGroup
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:paddingStart="13dp"
+        android:paddingEnd="13dp"
+        android:textColor="#333333"
+        app:back_src="@drawable/arrow_white"
+        app:imageHeight3="16dp"
+        app:imageWidth3="8dp"
+        app:layout_collapseMode="pin"
+        app:right_imageHeight3="20dp"
+        app:right_imageWidth3="22dp"
+        app:right_src="@drawable/service"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:title="流量查询" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/coordinator"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="76dp"
+            android:layout_below="@id/tvTitle"
             app:layout_constraintLeft_toLeftOf="@id/tvTitle"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle">
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            >
 
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appbar"
@@ -68,7 +64,6 @@
                         android:id="@+id/tvMainTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:gravity="center"
                         android:text="乐享4G套餐59元"
                         android:textColor="#fffbf7"
@@ -130,5 +125,4 @@
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
