--- a/app/src/main/res/layout/fragment_data_usage.xml
+++ b/app/src/main/res/layout/fragment_data_usage.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="13dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/shape_rectangle_white"
