--- a/app/src/main/res/layout/activity_settings_ball.xml
+++ b/app/src/main/res/layout/activity_settings_ball.xml
@@ -8,57 +8,60 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="小球大小"
-        android:paddingBottom="8dp"/>
+        android:paddingBottom="8dp"
+        android:text="小球大小" />
 
     <SeekBar
         android:id="@+id/seekBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="100"
-        android:progress="50"/>
+        android:progress="50" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="小球颜色"
         android:paddingTop="16dp"
-        android:paddingBottom="8dp"/>
+        android:paddingBottom="8dp"
+        android:text="小球颜色" />
 
     <RadioGroup
         android:id="@+id/radioGroupColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <RadioButton
             android:id="@+id/radioButtonBlue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="蓝色"
-            android:checked="true"/>
+            android:checked="true"
+            android:text="蓝色" />
+
         <RadioButton
             android:id="@+id/radioButtonRed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="红色"/>
+            android:text="红色" />
+
         <RadioButton
             android:id="@+id/radioButtonGreen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="绿色"/>
+            android:text="绿色" />
     </RadioGroup>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="玩法模式"
         android:paddingTop="16dp"
-        android:paddingBottom="8dp"/>
+        android:paddingBottom="8dp"
+        android:text="玩法模式" />
 
     <Switch
         android:id="@+id/switchMode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="启用重力感应"/>
+        android:text="启用重力感应" />
 
 </LinearLayout>
