--- a/app/src/main/res/layout/activity_settings_ball.xml
+++ b/app/src/main/res/layout/activity_settings_ball.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -32,23 +33,29 @@
         android:orientation="horizontal">
 
         <RadioButton
-            android:id="@+id/radioButtonBlue"
+            android:id="@+id/rbWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="蓝色" />
+            android:text="白色" />
 
         <RadioButton
-            android:id="@+id/radioButtonRed"
+            android:id="@+id/rbRed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="红色" />
 
         <RadioButton
-            android:id="@+id/radioButtonGreen"
+            android:id="@+id/rbBlue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="绿色" />
+            android:text="蓝色" />
+
+        <RadioButton
+            android:id="@+id/rbYellow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="黄色" />
     </RadioGroup>
 
     <TextView
@@ -62,6 +69,7 @@
         android:id="@+id/switchMode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="启用重力感应" />
+        android:text="启用重力感应"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 </LinearLayout>
