--- a/app/src/main/res/layout/activity_view_model_test.xml
+++ b/app/src/main/res/layout/activity_view_model_test.xml
@@ -37,4 +37,14 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button2"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
