--- a/app/src/main/res/layout/activity_threads.xml
+++ b/app/src/main/res/layout/activity_threads.xml
@@ -10,6 +10,7 @@
         android:id="@+id/btChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Change"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,6 +20,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Hello World"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
