--- a/app/src/main/res/layout/activity_custom.xml
+++ b/app/src/main/res/layout/activity_custom.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@color/design_default_color_secondary_variant"
+        android:background="@color/white"
         android:gravity="center"
         android:text="Sixth"
         android:textSize="24sp" />
